index.d.ts path

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "scripts": {
     "test": "node dist/test.js",
     "license": "npx license-checker --production > LICENSE",
-    "build:types": "npx rimraf basic-utils && npx cpx src/**/*.{ts,tsx} basic-utils/dist && npx tsc -p src/tsconfig.types.json --emitDeclarationOnly && npx rimraf basic-utils",
+    "build:types": "npx rimraf @bizhermit && npx cpx src/**/*.{ts,tsx} @bizhermit/basic-utils/dist && npx tsc -p src/tsconfig.types.json --emitDeclarationOnly && npx rimraf @bizhermit",
     "build": "npx rimraf dist && npm run license && npx tsc -p src && npx rimraf dist/test.js dist/test.d.ts && npx minifier ./dist && npx rimraf ./dist/cli.d.ts && npm run build:types"
   },
   "devDependencies": {
