--- a/package.json
+++ b/package.json
@@ -2,7 +2,12 @@
   "name": "@bizhermit/basic-utils",
   "version": "1.0.1",
   "description": "basic types utilities",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/bizhermit/basic-utils.git"
+  },
   "bugs": {
+    "url": "https://github.com/bizhermit/basic-utils/issues",
     "email": "support@bizhermit.com"
   },
   "author": "Ryoichi Senda <rsenda@bizhermit.com> (https://bizhermit.com)",
@@ -14,10 +19,11 @@
     "dist"
   ],
   "scripts": {
-    "test": "node dist/test.js",
+    "try": "node dist/test.js",
     "license": "npx license-checker --production > AUTHORS",
     "build:types": "npx rimraf @bizhermit && npx cpx src/**/*.{ts,tsx} @bizhermit/basic-utils/dist && npx tsc -p src/tsconfig.types.json --emitDeclarationOnly && npx rimraf @bizhermit",
-    "build": "npx rimraf dist && npm run license && npx tsc -p src && npx rimraf dist/test.js dist/test.d.ts && npx minifier ./dist && npx rimraf ./dist/cli.d.ts && npm run build:types"
+    "build": "npx rimraf dist && npm run license && npx tsc -p src && npx rimraf dist/test.js dist/test.d.ts && npx minifier ./dist && npx rimraf ./dist/cli.d.ts && npm run build:types",
+    "postpublish": "git tag && git push origin tags/v%npm_package_version%"
   },
   "devDependencies": {
     "@bizhermit/minifier": "^1.0.0",
