--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "url": "https://github.com/bizhermit/basic-utils/issues",
     "email": "support@bizhermit.com"
   },
-  "author": "Ryoichi Senda <rsenda@bizhermit.com> (https://bizhermit.com)",
+  "author": "Senda Ryoichi <rsenda@bizhermit.com> (https://bizhermit.com)",
   "homepage": "https://bizhermit.com",
   "license": "MIT",
   "main": "dist",
@@ -19,16 +19,16 @@
     "dist"
   ],
   "scripts": {
-    "try": "node test",
-    "license": "npx license-checker --production > AUTHORS",
+    "dev": "node test",
     "build:types": "npx rimraf @bizhermit && npx cpx src/**/*.{ts,tsx} @bizhermit/basic-utils/dist && npx tsc -p src/tsconfig.types.json --emitDeclarationOnly && npx rimraf @bizhermit",
-    "build": "npx rimraf dist && npm run license && npx tsc -p src && npx rimraf dist/test.js dist/test.d.ts && npx minifier ./dist && npx rimraf ./dist/cli.d.ts && npm run build:types",
+    "build": "npx rimraf dist LICENSE-ADD && npx tsc -p src/tsconfig.json && npx minifier dist && npx license -o LICENSE-ADD && npm run build:types",
+    "prepare": "npm run build && git add -A && git diff --quiet --exit-code --cached || git commit -m \"build v%npm_package_version%\" && git push origin",
     "postpublish": "git tag && git push origin tags/v%npm_package_version%"
   },
   "devDependencies": {
-    "@bizhermit/minifier": "^1.0.2",
+    "@bizhermit/license": "^1.0.2",
+    "@bizhermit/minifier": "^1.0.4",
     "cpx": "^1.5.0",
-    "license-checker": "^25.0.1",
     "rimraf": "^3.0.2",
     "typescript": "^4.5.4"
   },
@@ -37,6 +37,7 @@
     "utils",
     "string",
     "number",
-    "datetime"
+    "datetime",
+    "array"
   ]
 }
