--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
   "main": "dist",
   "types": "dist/index.d.ts",
   "files": [
-    "dist"
+    "dist",
+    "CREDIT"
   ],
   "scripts": {
     "dev": "node test",
+    "license": "npx rimraf CREDIT && npx license -o CREDIT --returnError",
     "build:types": "npx rimraf @bizhermit && npx cpx src/**/*.{ts,tsx} @bizhermit/basic-utils/dist && npx tsc -p src/tsconfig.types.json --emitDeclarationOnly && npx rimraf @bizhermit",
-    "build": "npx rimraf dist CREDIT && npx license -o CREDIT --returnError && npx tsc -p src/tsconfig.json && npx minifier dist && npm run build:types",
+    "build": "npm run license && npx rimraf dist && npx tsc -p src/tsconfig.json && npx minifier dist && npm run build:types",
     "prepare": "npm run build && git add -A && git diff --quiet --exit-code --cached || git commit -m \"build v%npm_package_version%\" && git push origin",
     "postpublish": "git tag && git push origin tags/v%npm_package_version%"
   },
