--- a/package.json
+++ b/package.json
@@ -13,10 +13,9 @@
   "author": "Senda Ryoichi <rsenda@bizhermit.com> (https://bizhermit.com)",
   "homepage": "https://bizhermit.com",
   "license": "MIT",
-  "main": "dist",
-  "types": "dist/index.d.ts",
+  "main": "dist/index",
+  "types": "dist/index",
   "files": [
-    "bin",
     "dist",
     "CREDIT"
   ],
@@ -24,7 +23,7 @@
     "dev": "node test",
     "license": "npx rimraf CREDIT && npx license -o CREDIT --returnError",
     "build:types": "npx rimraf @bizhermit && npx cpx src/**/*.{ts,tsx} %npm_package_name% && npx tsc -p src/tsconfig.types.json --emitDeclarationOnly && npx rimraf @bizhermit",
-    "build": "npm run license && npx rimraf bin dist && npx tsc -p src/tsconfig.json && npx rimraf bin/cli.d.ts && npx minifier bin && npx minifier dist && npm run build:types",
+    "build": "npm run license && npx rimraf dist && npx tsc -p src/tsconfig.json && npx minifier dist && npm run build:types",
     "prepare": "npm run build && git add -A && git diff --quiet --exit-code --cached || git commit -m \"build v%npm_package_version%\" && git push origin",
     "postpublish": "git tag && git push origin tags/v%npm_package_version%"
   },
