--- a/package.json
+++ b/package.json
@@ -4,26 +4,19 @@
   "description": "basic types utilities",
   "repository": {
     "type": "git",
-    "url": "https://github.com/bizhermit/basic-utils.git"
+    "url": "https://github.com/bizhermit/js-basic-utils.git"
   },
   "bugs": {
-    "url": "https://github.com/bizhermit/basic-utils/issues",
+    "url": "https://github.com/bizhermit/js-basic-utils/issues",
     "email": "support@bizhermit.com"
   },
   "author": "Senda Ryoichi <rsenda@bizhermit.com> (https://bizhermit.com)",
   "homepage": "https://bizhermit.com",
-  "license": "MIT",
-  "main": "dist/index",
-  "types": "dist/index",
-  "files": [
-    "dist",
-    "CREDIT"
-  ],
+  "license": "MIT",  
   "scripts": {
     "dev": "node test",
     "license": "npx rimraf CREDIT && npx license -o CREDIT --returnError",
-    "build:types": "npx rimraf @bizhermit && npx cpx src/**/*.{ts,tsx} %npm_package_name% && npx tsc -p src/tsconfig.types.json --emitDeclarationOnly && npx rimraf @bizhermit",
-    "build": "npm run license && npx rimraf dist && npx tsc -p src/tsconfig.json && npx minifier dist && npm run build:types",
+    "build": "npm run license && npx rimraf package && npx tsc -p src/tsconfig.json && npx minifier package",
     "prepare": "npm run build && git add -A && git diff --quiet --exit-code --cached || git commit -m \"build v%npm_package_version%\" && git push origin",
     "postpublish": "git tag && git push origin tags/v%npm_package_version%"
   },
@@ -33,13 +26,5 @@
     "cpx": "^1.5.0",
     "rimraf": "^3.0.2",
     "typescript": "^4.5.4"
-  },
-  "keywords": [
-    "bizhermit",
-    "utils",
-    "string",
-    "number",
-    "datetime",
-    "array"
-  ]
+  }
 }
