--- a/package.json
+++ b/package.json
@@ -16,9 +16,7 @@
   "scripts": {
     "dev": "node test",
     "license": "npx rimraf CREDIT && npx license -o CREDIT --returnError",
-    "build": "npm run license && npx rimraf package && npx tsc -p src/tsconfig.json && npx minifier package",
-    "prepare": "npm run build && git add -A && git diff --quiet --exit-code --cached || git commit -m \"build v%npm_package_version%\" && git push origin",
-    "postpublish": "git tag && git push origin tags/v%npm_package_version%"
+    "build": "npm run license && npx rimraf package && npx tsc -p src/tsconfig.json && npx minifier package"
   },
   "devDependencies": {
     "@bizhermit/license": "^1.0.9",
