--- a/package.json
+++ b/package.json
@@ -6,10 +6,7 @@
     "type": "git",
     "url": "https://github.com/bizhermit/js-basic-utils.git"
   },
-  "bugs": {
-    "url": "https://github.com/bizhermit/js-basic-utils/issues",
-    "email": "support@bizhermit.com"
-  },
+  "bugs": "https://github.com/bizhermit/js-basic-utils/issues",
   "author": "Senda Ryoichi <rsenda@bizhermit.com> (https://bizhermit.com)",
   "homepage": "https://bizhermit.com",
   "license": "MIT",
