--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bizhermit/basic-utils",
-  "version": "1.1.6",
+  "version": "2.0.0-rc.0",
   "description": "basic types utilities",
   "repository": {
     "type": "git",
