--- a/src/package.json
+++ b/src/package.json
@@ -1,23 +1,7 @@
 {
   "name": "@bizhermit/basic-utils",
-  "version": "2.0.0-rc.0",
+  "version": "2.0.0-rc.1",
   "description": "basic types utilities",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/bizhermit/js-basic-utils.git"
-  },
-  "bugs": "https://github.com/bizhermit/js-basic-utils/issues",
-  "author": "Senda Ryoichi <rsenda@bizhermit.com> (https://bizhermit.com)",
-  "homepage": "https://bizhermit.com",
-  "license": "MIT",
-  "types": "dist",
-  "files": [
-    "dist",
-    "CREDIT"
-  ],
-  "devDependencies": {
-    "typescript": "^4.7.4"
-  },
   "keywords": [
     "bizhermit",
     "utils",
@@ -26,5 +10,22 @@
     "datetime",
     "array",
     "promise"
-  ]
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/bizhermit/js-basic-utils.git"
+  },
+  "bugs": "https://github.com/bizhermit/js-basic-utils/issues",
+  "author": "Senda Ryoichi <rsenda@bizhermit.com> (https://bizhermit.com)",
+  "homepage": "https://bizhermit.com",
+  "license": "MIT",
+  "types": "index.d.ts",
+  "files": [
+    "dist",
+    "CREDIT",
+    "index.d.ts"
+  ],
+  "devDependencies": {
+    "typescript": "^4.7.4"
+  }
 }
